[metadata]
name = pupil-tracker-leonardomt
version = 0.0.1
author = Leo Molina
author_email = leonardomt@gmail.com
description = Pupil tracker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leomol/pupil-tracker
project_urls =
    Bug Tracker = https://github.com/leomol/pupil-tracker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.3

[options.packages.find]
where = src