[metadata]
name = pupillometry
version = 0.0.1
author = Leo Molina
author_email = leonardomt@gmail.com
description = Pupil diameter tracker
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pupillometer, pupillometry, pupil, tracker
url = https://github.com/leomol/pupillometry
project_urls =
    Bug Tracker = https://github.com/leomol/pupillometry/issues
classifiers =
    Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Image Processing
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
	numpy
	matplotlib
	scikit_learn
	scikit-image
	opencv-python

[options.packages.find]
where = src